--- a/documentation/manual/home.textile
+++ b/documentation/manual/home.textile
@@ -222,10 +222,10 @@ public void myCustomValidation() {
 p(note). ValidationTest itself also contains a test method, called @validObjectShouldValidate()@, that tests whether @valid()@ really returns a valid object. If your implementation of @valid()@ does not return a valid object (according to the annotations you put on its fields), this test will fail.
 
 
-h3. Webdriver testing
+h3. WebDriver testing
 
-Instead of Selenium 1, litmus provides you with Selenium Webdriver support for you UI testing needs.
-Basically, all you have to do is create a subclass of @litmus.WebdriverTest@ and write the test and page objects.
+Instead of Selenium 1, litmus provides you with Selenium WebDriver support for you UI testing needs.
+Basically, all you have to do is create a subclass of @litmus.WebDriverTest@ and write the test and page objects.
 Litmus provides you with a WebElementAssert, so you can write:
 
 bc. @Test
@@ -246,7 +246,7 @@ Currently, there are two issues with litmus webdriver tests:
 
 p(note). In order to be able to run webdriver tests, play needs an execution pool of at least 2 threads. To configure you app this way,
 add @%test.play.pool=2@ to your application.conf file.
-@litmus.WebdriverTest@ checks this setting your play configuration before running.
+@litmus.WebDriverTest@ checks this setting your play configuration before running.
 
 h3. The Litmus Test Runner
 
@@ -269,4 +269,4 @@ public class SomeTest{
 
 You can also give these tests a priority (an int). This priority will determine how high the category will be shown in the litmus test runner. The lower the number, the higher the priority.
 
-p(note). Subclasses of @litmus.UnitTest@, @litmus.FunctionalTest@ and @litmus.WebdriverTest@ will get categorized by default, with respective priorities of 10000, 20000 and 30000.
+p(note). Subclasses of @litmus.UnitTest@, @litmus.FunctionalTest@ and @litmus.WebDriverTest@ will get categorized by default, with respective priorities of 10000, 20000 and 30000.
